Fixed war building to include enunciate stuff. Moved to cargo for tomcat deployment.
git-svn-id: https://wush.net/svn/mindalliance@4221 baad322d-9929-0410-88f0-f92e8ff3e1bd